--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
+        <h1>Aqui ya vamos a hacer un blog post</h1>
         <p>y este parrafo es de inicio</p>
     </body>
 </html>
