cambios de html y cabecera

--- a/blogpost  2.html
+++ b/blogpost  2.html
@@ -6,16 +6,17 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                cabecera
-                
+                Hyperblog 
+                <span id="tagline"> tu blog de 
+                    confianza
+        
+                </span>
+
+            </div>    
                 <div id="post">
                     <h1>Aqui ya vamos a hacer un blog post</h1>
                     <p>y este parrafo es de inicio</p>
-                </div>
-
-
-
-            </div>
+                </div>     
         </div>
     </body>
 </html>
