--- a/blogpostbueno.html
+++ b/blogpostbueno.html
@@ -14,11 +14,7 @@
 
             </div>    
                 <div id="post">
-<<<<<<< HEAD
-                    <h1>Aqui ya vamos a hacer un blog post</h1>
-=======
-                    <h1>Aqui esta la linea de la rama alterna</h1>
->>>>>>> rama_alterna
+                    <h1>Aqui no hago cambios en la rama alterna<h1>
                     <p>y este parrafo es el que va a estar modificado en master</p>
                 </div>     
         </div>
