--- a/blogpostbueno.html
+++ b/blogpostbueno.html
@@ -8,17 +8,13 @@
             <div id="cabecera">
                 Hyperblog 
                 <span id="tagline"> tu blog de 
-                    confianza
+                    cabecera
         
                 </span>
 
             </div>    
                 <div id="post">
-<<<<<<< HEAD
                     <h1>Aqui no hago cambios en la rama alterna<h1>
-=======
-                    <h1>Aqui ya vamos a hacer un blog post</h1>
->>>>>>> cabecera
                     <p>y este parrafo es el que va a estar modificado en master</p>
                 </div>     
         </div>
