ajustes de centrado

--- a/blogpostbueno.html
+++ b/blogpostbueno.html
@@ -8,20 +8,15 @@
             <div id="cabecera">
                 Hyperblog 
                 <span id="tagline"> tu blog de 
-<<<<<<< HEAD
-                    maestro
-=======
-                    cabecera
->>>>>>> mal
+                    confianza
         
                 </span>
-
             </div>    
-                <div id="post">
-                    <h1>Aqui no hago cambios en la rama alterna<h1>
-                    <p>y este parrafo es el que va a estar modificado en master</p>
-                    <p>suscribete y dale like</p>
-                </div>     
+            <div id="post">
+                <h1>Aqui no hago cambios en la rama alterna<h1>
+                <p>y este parrafo es el que va a estar modificado en master</p>
+                <p>suscribete y dale like</p>
+            </div>     
         </div>
     </body>
 </html>
