--- a/blogpostbueno.html
+++ b/blogpostbueno.html
@@ -14,7 +14,7 @@
             </div>    
             <div id="post">
                 <h1>Aqui no hago cambios en la rama alterna<h1>
-                <p>y este parrafo es el que va a estar modificado en master</p>
+                <p>y este parrafo es el que va a decir como 33</p>
                 <p>suscribete y dale like</p>
             </div>     
         </div>
