nuevos ajustes y cambios

--- a/blogpostbueno.html
+++ b/blogpostbueno.html
@@ -13,7 +13,7 @@
                 </span>
             </div>    
             <div id="post">
-                <h1>Aqui no hago cambios en la rama alterna<h1>
+                <h1>como  que 33<h1>
                 <p>y este parrafo es el que va a decir como 33</p>
                 <p>suscribete y dale like</p>
             </div>     
